--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <button onclick="app.userData.setOnce()" class="fluid ui button teal">UserData.setOnce</button>
         <div class="ui horizontal divider">User Methods End</div>
         <div class="ui horizontal divider">Other Methods Start</div>
-        <button onclick="app.onRegistrationId()" class="fluid ui button teal">Push Message</button>
+        <button onclick="app.sendPushToken()" class="fluid ui button teal">Push Message</button>
         <button onclick="app.testAndroidPush()" class="fluid ui button teal">Push Test Android</button>
         <button onclick="app.testiOSPush()" class="fluid ui button teal">Push Test iOS</button>
         <button onclick="app.changeDeviceId('123456')" class="fluid ui button">Change Device ID</button>
@@ -66,9 +66,16 @@
     app.init = function() {
         var deviceId = "" +Math.random();
         Countly.init("https://try.count.ly", "0e8a00e8c01395a0af8be0e55da05a404bb23c3e");
+        // setTimeout(function(){
+        //     Countly.getDeviceID(function(result){
+        //         alert(JSON.stringify(result));
+        //     }, function(error){
+        //         alert(JSON.stringify(error));
+        //     });
+        // }, 3000);
     };
     app.test = function() {
-        app.onRegistrationId();
+        app.sendPushToken();
         app.sendSampleEvent();
     }
 
@@ -161,7 +168,7 @@
     }
 
     app.testAndroidPush = function() {
-        Countly.onRegistrationId({
+        Countly.sendPushToken({
             "registrationId": "1234567890",
             "mode": Countly.messagingMode.PRODUCTION,
             "projectId": "881000050249" // only for google / android
@@ -169,7 +176,7 @@
     };
 
     app.testiOSPush = function() {
-        Countly.onRegistrationId({
+        Countly.sendPushToken({
             "registrationId": "1234567890",
             "mode": Countly.messagingMode.PRODUCTION,
             "projectId": "881000050249" // only for google / android
@@ -177,7 +184,7 @@
     };
 
 
-    app.onRegistrationId = function() {
+    app.sendPushToken = function() {
 
         var push = PushNotification.init({
             android: {
@@ -196,10 +203,9 @@
 
         push.on('registration', function(data) {
             alert('Token received: '+data.registrationId);
-            Countly.onRegistrationId({
-                "registrationId": data.registrationId,
-                "mode": Countly.messagingMode.TEST,
-                "projectId": "881000050249" // only for google / android
+            Countly.sendPushToken({
+                "token": data.registrationId,
+                "messagingMode": Countly.messagingMode.TEST
             });
         });
 
@@ -372,7 +378,7 @@
     cordova -v
     8.1.2 (cordova-lib@8.1.1)
     countly -v
-    18.08.0
+    18.08.1
     phonegap-plugin-push
     2.2.3
     https://github.com/phonegap/phonegap-plugin-push/commit/2f45c0dd7520da1f6bb4b86c15c747dec0cfef1c
