added front end changes

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     app.setCaptianAmericaData = function() {
         // example for setCaptianAmericaData
         Countly.stop();
-        Countly.changeDeviceId("234567");
+        Countly.changeDeviceId("234567", false);
         var options = {};
         options.name = "Captian America";
         options.username = "captianamerica";
@@ -189,7 +189,7 @@
     app.setIronManData = function() {
         // example for setIronManData 
         Countly.stop();
-        Countly.changeDeviceId("345678");
+        Countly.changeDeviceId("345678", false);
         var options = {};
         options.name = "Iron Man";
         options.username = "ironman";
@@ -207,7 +207,7 @@
     app.setSpiderManData = function() {
         // example for setSpiderManData
         Countly.stop();
-        Countly.changeDeviceId("456789");
+        Countly.changeDeviceId("456789", false);
         var options = {};
         options.name = "Spider-Man";
         options.username = "spiderman";
@@ -219,6 +219,7 @@
         options.gender = "M"; // "F"
         options.byear = 1989;
         Countly.setUserData(options);
+        Countly.start();
     };
     
 
