Fixed a bug reported by Artem.

--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
     app.sendPushToken = function() {
 
         var push = PushNotification.init({
+            android: {sound: true},
             ios: {
                 alert: "true",
                 badge: "true",
