--- a/index.html
+++ b/index.html
@@ -435,16 +435,16 @@
     }
     
     
-    /** Use StackTrace to log all exceptions **/
-    (function(){
-        if (window.StackTrace) {
-            StackTrace.get().then(function(stackframes) {
-                if (Countly.isCrashReportingEnabled) {
-                    Countly.logException(stackframes, true, {"_facebook_version": "0.0.1"});
-                }
-            }).catch(function(err) {});
-        }
-    })();
+    // /** Use StackTrace to log all exceptions **/
+    // (function(){
+    //     if (window.StackTrace) {
+    //         StackTrace.get().then(function(stackframes) {
+    //             if (Countly.isCrashReportingEnabled) {
+    //                 Countly.logException(stackframes, true, {"_facebook_version": "0.0.1"});
+    //             }
+    //         }).catch(function(err) {});
+    //     }
+    // })();
 
     /*
     @dev instructions for personal modification
