Forgot to add the link.

--- a/index.html
+++ b/index.html
@@ -545,6 +545,9 @@
             I was able to test iOS with old version 1.9.0
 
     Step 11:  Build the app, and test push notifications.
+
+    https://drive.google.com/file/d/1xH6L5nI6hntfnbRis9VEOyTgy9C03Sqw/view?usp=sharing
+    Here is the push notification video tutorial explaining it.
     -----------------------------------
 
     */
