Rating: created method for dom query.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 color: #47a9f4;
             }
         </style>
-        <div id="countly-rating-modal" class="countly-modal">
+        <div class="countly-modal countly-rating-modal">
             <div class="countly-modal-header">How would you rate the app?</div>
             <div class="countly-modal-rating">&#x2605; &#x2606; &#x2606; &#x2606; &#x2606;</div>
             <div class="countly-modal-divider"></div>
