Rating: completed user star rating.

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
             }
         </style>
         <div class="countly-modal countly-rating-modal">
-            <div class="countly-modal-header">How would you rate the app?</div>
-            <div class="countly-modal-rating">&#x2605; &#x2606; &#x2606; &#x2606; &#x2606;</div>
+            <div class="countly-modal-header"></div>
+            <div class="countly-modal-content"></div>
             <div class="countly-modal-divider"></div>
-            <div class="countly-modal-dismiss">Dismiss</div>
+            <div class="countly-modal-dismiss"></div>
             <div class="countly-modal-submit">Submit</div>
         </div>
     </div>
