Rating: Playing with font size.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 z-index: 99;
                 border: 1px solid #e0e0e0;
                 text-align: center;
-                font-size: 2.5rem;
+                font-size: 2rem;
                 display: none;
             }
             .countly-modal div{
@@ -108,7 +108,7 @@
             <div class="countly-modal-content"></div>
             <div class="countly-modal-divider"></div>
             <div class="countly-modal-dismiss"></div>
-            <div class="countly-modal-submit">Submit</div>
+            <div class="countly-modal-submit"></div>
         </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
