--- a/index.html
+++ b/index.html
@@ -65,44 +65,6 @@
         <button onclick="app.askForStarRating()" class="fluid ui button">Open rating modal</button>
         <div class="ui horizontal divider">Other Methods End</div>
         <!-- Modal UI -->
-        <style>
-            .countly-modal.open{
-                display: block;
-            }
-            .countly-modal{
-                width: 80%;
-                height: auto;
-                position: fixed;
-                top: 10%;
-                left: 10%;
-                background-color: white;
-                border-radius: 20px;
-                z-index: 99;
-                border: 1px solid #e0e0e0;
-                text-align: center;
-                font-size: 2rem;
-                display: none;
-            }
-            .countly-modal div{
-                margin: 20px;
-            }
-            .countly-modal-header{
-                margin-top: 20px;
-            }
-            .countly-modal-divider{
-                position: relative;
-                margin: auto;
-                height: 1px;
-                border: 1px solid #e0e0e0;
-            }
-            .countly-modal-dismiss{
-                color: #47a9f4;
-            }
-            .countly-modal-submit{
-                display: none;
-                color: #47a9f4;
-            }
-        </style>
         <div class="countly-modal countly-rating-modal">
             <div class="countly-modal-header"></div>
             <div class="countly-modal-content"></div>
@@ -110,9 +72,17 @@
             <div class="countly-modal-dismiss"></div>
             <div class="countly-modal-submit"></div>
         </div>
+
+        <div class="countly-modal countly-feedback-modal open">
+            <div class="countly-modal-header">Header</div>
+            <div class="countly-modal-content"></div>
+            <div class="countly-modal-divider"></div>
+            <div class="countly-modal-dismiss"><img src="https://try.count.ly/star-rating/images/star-rating/powered-by-countly.svg"/></div>
+        </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="Countly.js"></script>
+    <script type="text/javascript" src="Countly.feedback.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/stacktrace.js/2.0.0/stacktrace.min.js">
     </script>
     <script type="text/javascript">
