--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
+    <link rel="stylesheet" type="text/css" href="Countly.css">
     <script type="text/javascript" src="Countly.js"></script>
     <script type="text/javascript" src="Countly.feedback.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/stacktrace.js/2.0.0/stacktrace.min.js">
