--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         <button onclick="app.sendRating()" class="fluid ui button">Send 5 star rating!!</button>
         <button onclick="app.askForStarRating()" class="fluid ui button">Open rating modal</button>
         <div class="ui horizontal divider">Other Methods End</div>
-        <!-- Modal UI -->
+
+        <!-- Rating modal -->
         <div class="countly-rating">
             <div class="countly-rating-header"></div>
             <div class="countly-rating-content"></div>
@@ -72,6 +73,7 @@
             <div class="countly-rating-dismiss"></div>
             <div class="countly-rating-submit"></div>
         </div>
+        <!-- Rating modal -->
 
         <!-- Feedback modal -->
         <div class="countly-feedback open">
@@ -110,8 +112,9 @@
             <div class="countly-feedback-divider"></div>
             <div class="countly-feedback-dismiss"><img src="https://try.count.ly/star-rating/images/star-rating/powered-by-countly.svg"/></div>
         </div>
-
     </div>
+    <!-- Feedback modal -->
+
     <script type="text/javascript" src="cordova.js"></script>
     <link rel="stylesheet" type="text/css" href="Countly.feedback.css">
     <script type="text/javascript" src="Countly.js"></script>
