--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="ui horizontal divider">Rating Methods End</div>
         <!-- Modal UI -->
         <style>
-            .countly-modal.open{
+            /* .countly-modal.open{
                 display: block;
             }
             .countly-modal{
@@ -115,15 +115,100 @@
             .countly-modal-submit{
                 display: none;
                 color: #47a9f4;
+            } */
+
+              /* For FeedBack modal */
+            /* for tooltip */
+            .tooltip {
+                position: relative;
+                display: inline-block;
             }
+
+            .tooltip .tooltiptext {
+                visibility: hidden;
+                width: auto;
+                background-color: black;
+                color: #fff;
+                text-align: center;
+                font-size: 15px;
+                border-radius: 6px;
+                padding: 5px 0;
+
+                position: absolute;
+                z-index: 1;
+                bottom: 100%;
+                left: 50%;
+                margin-left: -60px;
+            }
+
+
+            /* .pointer {
+                cursor: pointer;
+            } */
+
+            .tooltip:hover .tooltiptext {
+                visibility: visible;
+            }
+
+            /* button  */
+            .button {
+                background-color: #4CAF50;
+                border: none;
+                color: white;
+                font-family: 'Lato', sans-serif;
+                padding: 9px 10px;
+                text-align: center;
+                border-radius: 3px;
+                text-decoration: none;
+                font-size: 13px;
+                margin: 4px 2px;
+                cursor: pointer;
+                width: 60%;
+            }
+
+            /* for close icon */
+            .close {
+                position: absolute;
+                right: 32px;
+                top: 32px;
+                width: 32px;
+                height: 32px;
+                opacity: 0.3;
+            }
+
+            /* for text area */
+            /* .textareaClass {
+                width: 100%;
+                height: 60px;
+                margin-top: 10px;
+                resize: none;
+                border: 1px solid #DBDBDB;
+                outline: none;
+                font-size: 13px;
+                border-radius: 3px;
+            } */
+
+            /* for email */
+            /* .emailClass {
+                width: 100%;
+                outline: none;
+                border: 1px solid #DBDBDB;
+                height: 30px;
+                margin-top: 10px;
+                line-height: 20px;
+                padding-left: 2px;
+                font-size: 13px;
+                border-radius: 3px;
+            } */
+            /* for FeedBack modal */
         </style>
-        <div class="countly-modal countly-rating-modal">
+        <!-- <div class="countly-modal countly-rating-modal">
             <div class="countly-modal-header"></div>
             <div class="countly-modal-content"></div>
             <div class="countly-modal-divider"></div>
             <div class="countly-modal-dismiss"></div>
             <div class="countly-modal-submit"></div>
-        </div>
+        </div> -->
     </div>
     <script type="text/javascript">
     app = {};
