feedback work added

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             }
 
             /* button  */
-            .button {
+            .countly-feedback-button {
                 background-color: #4CAF50;
                 border: none;
                 color: white;
