--- a/index.html
+++ b/index.html
@@ -310,6 +310,63 @@
         };
         Countly.sendEvent(events);
     }
+
+    app.basicEvent = function() {
+        // example for basic event
+        var event = {
+            "key": "Basic Event",
+            "count": 1
+        };
+        Countly.recordEvent(event);
+    }
+    app.eventWithSum = function() {
+        // example for event with sum
+        var event = {
+            "key": "Event With Sum",
+            "count": 1,
+            "sum": "0.99",
+        };
+        Countly.recordEvent(event);
+    }
+    app.eventWithSegment = function() {
+        // example for event with segment
+        var event = {
+            "key": "Event With Segment",
+            "count": 1
+        };
+        event["segmentation"] = {
+            "Country": "Turkey",
+            "Age": "28"
+        };
+        Countly.recordEvent(event);        
+    }
+    app.eventWithSumSegment = function() {
+        // example for event with segment and sum
+        var event = {
+            "key": "Event With Sum And Segment",
+            "count": 1,
+            "sum": "0.99"
+        };
+        event["segmentation"] = {
+            "Country": "Turkey",
+            "Age": "28"
+        };
+        Countly.recordEvent(event);
+    }
+    app.eventWithSumSegment_duration = function() {
+        // example for event with segment and sum
+        var event = {
+            "key": "Event With Sum And Segment duration",
+            "count": 1,
+            "sum": "0.99",
+            "duration":"0"
+        };
+        event["segmentation"] = {
+            "Country": "Turkey",
+            "Age": "28"
+        };
+        Countly.recordEvent(event);
+    }
     app.setUserData = function() {
         // example for setUserData
         var options = {};
@@ -473,13 +530,13 @@
     app.endEventBasic = function() {
         Countly.startEvent("Timed Event");
         setTimeout(function() {
-            Countly.endEvent({ "eventName": "Timed Event" });
+            Countly.endEvent({ "key": "Timed Event" });
         }, 1000);
     }
     app.endEventWithSum = function() {
         Countly.startEvent("Timed Event With Sum");
         setTimeout(function() {
-            Countly.endEvent({ "eventName": "Timed Event With Sum", "eventSum": "0.99" });
+            Countly.endEvent({ "key": "Timed Event With Sum", "sum": "0.99" });
         }, 1000);
     }
     app.endEventWithSegment = function() {
@@ -487,7 +544,7 @@
         setTimeout(function() {
 
             var events = {
-                "eventName": "Timed Event With Segment"
+                "key": "Timed Event With Segment"
             };
             events.segments = {
                 "Country": "Turkey",
@@ -500,9 +557,9 @@
         Countly.startEvent("Timed Event With Segment, Sum and Count");
         setTimeout(function() {
             var events = {
-                "eventName": "Timed Event With Segment, Sum and Count",
-                "eventCount": 1,
-                "eventSum": "0.99"
+                "key": "Timed Event With Segment, Sum and Count",
+                "count": 1,
+                "sum": "0.99"
             };
             events.segments = {
                 "Country": "Turkey",
@@ -517,7 +574,7 @@
         Countly.sendRating(5);
     }
     app.askForFeedback = function(){
-        Countly.askForFeedback("5d80915a31ec7124c86df698", function(url){
+        Countly.askForFeedback("5dee3bd61059396ae5b899fe", function(url){
             //
             url = "https://try.count.ly/feedback?widget_id=5d80915a31ec7124c86df698&device_id=a02cee5e35b6b8e8&app_key=0e8a00e8c01395a0af8be0e55da05a404bb23c3e";
             // open modal + close button with iframe.
