--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button onclick="app.basicEvent()" class="fluid ui button">Basic Events</button>
         <button onclick="app.eventWithSum()" class="fluid ui button">Event with Sum</button>
         <button onclick="app.eventWithSegment()" class="fluid ui button">Event with Segment</button>
-        <button onclick="app.eventWithSum_Segment()" class="fluid ui button">Even with Sum and Segment</button>
+        <button onclick="app.eventWithSumSegment()" class="fluid ui button">Even with Sum and Segment</button>
         <button onclick="app.event()" class="fluid ui black button">All Events</button>
         <button onclick="app.endEventBasic()" class="fluid ui button">Timed event: Start / Stop</button>
         <button onclick="app.endEventWithSum()" class="fluid ui button">Timed event Sum: Start / Stop</button>
@@ -293,50 +293,50 @@
         app.basicEvent();
         app.eventWithSum();
         app.eventWithSegment();
-        app.eventWithSum_Segment();
+        app.eventWithSumSegment();
     }
-    app.basicEvent = function() {
-        // example for basic event
-        var events = {
-            "eventName": "basic_event",
-            "eventCount": 1
-        };
-        Countly.sendEvent(events);
-    }
-    app.eventWithSum = function() {
-        // example for event with sum
-        var events = {
-            "eventName": "event_sum",
-            "eventCount": 1,
-            "eventSum": "0.99"
-        };
-        Countly.sendEvent(events);
-    }
-    app.eventWithSegment = function() {
-        // example for event with segment
-        var events = {
-            "eventName": "event_segment",
-            "eventCount": 1
-        };
-        events.segments = {
-            "Country": "Turkey",
-            "Age": "28"
-        };
-        Countly.sendEvent(events);
-    }
-    app.eventWithSum_Segment = function() {
-        // example for event with segment and sum
-        var events = {
-            "eventName": "event_segment_sum",
-            "eventCount": 1,
-            "eventSum": "0.99"
-        };
-        events.segments = {
-            "Country": "Turkey",
-            "Age": "28"
-        };
-        Countly.sendEvent(events);
-    }
+    // app.basicEvent = function() {
+    //     // example for basic event
+    //     var events = {
+    //         "eventName": "basic_event",
+    //         "eventCount": 1
+    //     };
+    //     Countly.sendEvent(events);
+    // }
+    // app.eventWithSum = function() {
+    //     // example for event with sum
+    //     var events = {
+    //         "eventName": "event_sum",
+    //         "eventCount": 1,
+    //         "eventSum": "0.99"
+    //     };
+    //     Countly.sendEvent(events);
+    // }
+    // app.eventWithSegment = function() {
+    //     // example for event with segment
+    //     var events = {
+    //         "eventName": "event_segment",
+    //         "eventCount": 1
+    //     };
+    //     events.segments = {
+    //         "Country": "Turkey",
+    //         "Age": "28"
+    //     };
+    //     Countly.sendEvent(events);
+    // }
+    // app.eventWithSum_Segment = function() {
+    //     // example for event with segment and sum
+    //     var events = {
+    //         "eventName": "event_segment_sum",
+    //         "eventCount": 1,
+    //         "eventSum": "0.99"
+    //     };
+    //     events.segments = {
+    //         "Country": "Turkey",
+    //         "Age": "28"
+    //     };
+    //     Countly.sendEvent(events);
+    // }
 
     app.basicEvent = function() {
         // example for basic event
@@ -606,7 +606,7 @@
         Countly.sendRating(5);
     }
     app.askForFeedback = function(){
-        Countly.askForFeedback("5dee3bd61059396ae5b899fe");
+        Countly.askForFeedback("5e391ef47975d006a22532c0");
         // , function(url){
         //     //
         //     url = "https://try.count.ly/feedback?widget_id=5d80915a31ec7124c86df698&device_id=a02cee5e35b6b8e8&app_key=0e8a00e8c01395a0af8be0e55da05a404bb23c3e";
