working on end event

--- a/index.html
+++ b/index.html
@@ -232,19 +232,14 @@
         return text;
     }
     app.init = function() {
-        var deviceId = "" +Math.random();
         Countly.init("https://trinisoft.count.ly", "f0b2ac6919f718a13821575db28c0e2971e05ec5");
-        // setTimeout(function(){
-        //     Countly.getDeviceID(function(deviceId){
-        //         console.log(deviceId);
-        //     }, function(getDeviceIDError){
-        //         console.log(getDeviceIDError);
-        //     });
-        // }, 3000);
+        Countly.eventSendThreshold(1);
+        Countly.setLoggingEnabled();
     };
     app.initWithID = function(){
         Countly.init("https://trinisoft.count.ly", "0e8a00e8c0139f0b2ac6919f718a13821575db28c0e2971e05ec55a0af8be0e55da05a404bb23c3e", makeid());
-
+        Countly.eventSendThreshold(1);
+        Countly.setLoggingEnabled();
     }
     app.test = function() {
         app.sendPushToken();
